--- a/school website/index.html
+++ b/school website/index.html
@@ -126,5 +126,35 @@
         </div>
         </div>
         </div>
+
+        <!---------- ratings -------->
+
+                 <div class="main-section">
+                    <div class="container">
+                        <h2 class="heading"> What Parents Say About Our School </h2> 
+                        <div class="Testimonials">
+                            <div class="Testimonials-text">
+                                " I am impressed with your Curriculum and teaching methods which is different from 
+                                other schools. well planned worksheets for practice makes my child think beyond prescribed
+                                textbooks. i like to take this privilege to congratulate the management of the school for its endless efforts."
+                            </div>
+                        </div>
+                            <div class="Testimonials">
+                                <div class="Testimonials-text">
+                                    " I am impressed with your Curriculum and teaching methods which is different from 
+                                    other schools. well planned worksheets for practice makes my child think beyond prescribed
+                                    textbooks. i like to take this privilege to congratulate the management of the school for its endless efforts."
+                                </div>
+                            </div>
+                            <div class="Testimonials">
+                                <div class="Testimonials-text">
+                                    " I am impressed with your Curriculum and teaching methods which is different from 
+                                    other schools. well planned worksheets for practice makes my child think beyond prescribed
+                                    textbooks. i like to take this privilege to congratulate the management of the school for its endless efforts."
+                                </div>
+                            </div>
+                    </div>
+                </div>
+
     </body>
 </html>
