added every neccessary thing and modified

--- a/school-website/index.html
+++ b/school-website/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Akshobhya Public School & Pu College</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Akshobhya Public School" name="keywords">
+    <meta content="Admission open for Akshobhya Public Schoo & Pu College" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -68,7 +68,7 @@
                 <h1 class="text-white mb-4 mt-5 mt-lg-0" style="font-size: 30px; text-align: top" >Akshobhya Public School & Pu college</h1>
                 <h4 class="display-3 font-weight-bold text-white" >Your Child Is Our Priority</h4>
                 <h2><p class="text-white mb-4">Create The Best Future For Your Children</p></h2>
-                <a href="" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
+                <a href="about.html" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="header-image">
@@ -196,7 +196,7 @@
                         <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Enter Your Email id.</li>
                         <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Enter Class Of Your Child.</li>
                     </ul>
-                    <a href="#" class="btn btn-primary mt-4 py-2 px-4">Book Now</a>
+                    <a href="emailForm" class="btn btn-primary mt-4 py-2 px-4">Book Now</a>
                 </div>
                 <div class="col-lg-5">
                     <div class="card border-0">
@@ -204,28 +204,28 @@
                             <h1 class="text-white m-0">Book A Seat</h1>
                         </div>
                         <div class="card-body rounded-bottom bg-primary p-5">
-                            <form>
+                            <form id="emailForm">
                                 <div class="form-group">
-                                    <input type="text" class="form-control border-0 p-4" placeholder="Your Name" required="required" />
+                                    <input type="text" class="form-control border-0 p-4" name="name" placeholder="Your Name" required="required" />
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control border-0 p-4" placeholder="Your Email" required="required" />
+                                    <input type="email" class="form-control border-0 p-4" name="email" placeholder="Your Email" required="required" />
                                 </div>
                                 <div class="form-group">
-                                    <select class="custom-select border-0 px-4" style="height: 47px;">
+                                    <select class="custom-select border-0 px-4" name="class" style="height: 47px;">
                                         <option selected>Select A Class</option>
-                                        <option value="1">Pre-Kg</option>
-                                        <option value="2">L-Kg</option>
-                                        <option value="3">class 1</option>
-                                        <option value="4">class 2</option>
-                                        <option value="5">class 3</option>
-                                        <option value="6">class 4</option>
-                                        <option value="7">class 5</option>
-                                        <option value="8">class 6</option>
-                                        <option value="9">class 7</option>
-                                        <option value="10">class 8</option>
-                                        <option value="11">class 9</option>
-                                        <option value="12">class 10</option>
+                                        <option value="Pre-Kg">Pre-Kg</option>
+                                        <option value="L-Kg">L-Kg</option>
+                                        <option value="class 1">class 1</option>
+                                        <option value="class 2">class 2</option>
+                                        <option value="class 3">class 3</option>
+                                        <option value="class 4">class 4</option>
+                                        <option value="class 5">class 5</option>
+                                        <option value="class 6">class 6</option>
+                                        <option value="class 7">class 7</option>
+                                        <option value="class 8">class 8</option>
+                                        <option value="class 9">class 9</option>
+                                        <option value="class 10">class 10</option>
                                     </select>
                                 </div>
                                 <div>
@@ -323,7 +323,7 @@
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                         style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                        style="width: 38px; height: 38px;" href="akshobhyaschoolandpucollege"><i class="fab fa-instagram"></i></a>
+                        style="width: 38px; height: 38px;" href="https://www.instagram.com/akshobhyaschoolandpucollege"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
@@ -403,8 +403,7 @@
     <script src="lib/lightbox/js/lightbox.min.js"></script>
 
     <!-- Contact Javascript File -->
-    <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
+    <script src="book_Slot/bookSlot.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
