--- a/school-website/index.html
+++ b/school-website/index.html
@@ -196,7 +196,7 @@
                         <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Enter Your Email id.</li>
                         <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Enter Class Of Your Child.</li>
                     </ul>
-                    <a href="emailForm" class="btn btn-primary mt-4 py-2 px-4">Book Now</a>
+                    <a href="#emailForm" class="btn btn-primary mt-4 py-2 px-4">Book Now</a>
                 </div>
                 <div class="col-lg-5">
                     <div class="card border-0">
@@ -204,7 +204,7 @@
                             <h1 class="text-white m-0">Book A Seat</h1>
                         </div>
                         <div class="card-body rounded-bottom bg-primary p-5">
-                            <form id="emailForm">
+                            <form action="/AkshobhyaPublicSchool_Project/school-website/book_Slot/send_email.php" method="post" id="emailForm">
                                 <div class="form-group">
                                     <input type="text" class="form-control border-0 p-4" name="name" placeholder="Your Name" required="required" />
                                 </div>
