--- a/school-website/index.html
+++ b/school-website/index.html
@@ -204,7 +204,7 @@
                             <h1 class="text-white m-0">Book A Seat</h1>
                         </div>
                         <div class="card-body rounded-bottom bg-primary p-5">
-                            <form action="/AkshobhyaPublicSchool_Project/school-website/book_Slot/send_email.php" method="post" id="emailForm">
+                            <form action="/book_Slot/send_email.php" method="post" id="emailForm">
                                 <div class="form-group">
                                     <input type="text" class="form-control border-0 p-4" name="name" placeholder="Your Name" required="required" />
                                 </div>
