--- a/school-website/gallery.html
+++ b/school-website/gallery.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <title>Akshobhya Public School</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
-
+    <meta content="Akshobhya Public School" name="keywords">
+    <meta content="Admission open for Akshobhya Public Schoo & Pu College" name="description">
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -40,7 +39,7 @@
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
             <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
                 <img src="images/logo.png" class="logo" >
-                <span class="text-primary"  style="font-size: 20px;">Akshobhya Group of Institutions</span>
+                <span class="text-primary"  style="font-size: 25px;">Akshobhya Group of Institutions</span>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -49,7 +48,7 @@
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">About-Us</a>
-                    <a href="#" class="nav-item nav-link">Testimonials</a>
+                    <a href="index.html#Testimonial" class="nav-item nav-link">Testimonials</a>
                     <a href="gallery.html" class="nav-item nav-link">Our gallery</a>
                     <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
                     
@@ -296,7 +295,7 @@
                     <h4 class="fa fa-map-marker-alt text-primary"></h4>
                     <div class="pl-3">
                         <h5 class="text-white">Address</h5>
-                        <p>100 ft ring road hosakerehalli bak 3rd stage bengalore 560085</p>
+                        <p>100 ft ring road hosakerehalli BSK 3rd stage bengalore 560085</p>
                         <div class="mapsect">
                             <iframe width="250" height="100" frameborder="0" scrolling="0" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3888.597374832102!2d77.5361721750758!3d12.933579287378267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTLCsDU2JzAwLjkiTiA3N8KwMzInMTkuNSJF!5e0!3m2!1sen!2sin!4v1714042485648!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                          </div>
@@ -322,13 +321,13 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
                     <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Testimonials</a>
+                    <a class="text-white mb-2" href="index.html#Testimonial"><i class="fa fa-angle-right mr-2"></i>Testimonials</a>
                     <a class="text-white mb-2" href="gallery.html"><i class="fa fa-angle-right mr-2"></i>Our Gallery</a>
                     <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h3 class="text-primary mb-4">Newsletter</h3>
+                <h3 class="text-primary mb-4">Contact Us</h3>
                 <form action="">
                     <div class="form-group">
                         <input type="text" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
@@ -338,7 +337,7 @@
                             required="required" />
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-block border-0 py-3" type="submit">Submit Now</button>
+                        <button class="btn btn-primary btn-block border-0 py-3" type="submit">Contact Now</button>
                     </div>
                 </form>
             </div>
