--- a/school-website/index.html
+++ b/school-website/index.html
@@ -40,7 +40,7 @@
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
             <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 40px;">
               <img src="images/logo.png" class="logo">
-                <span class="text-primary" style="font-size: 20px;" >Akshobhya Group of Institutions</span>
+                <span class="text-primary" style="font-size: 25px;" >Akshobhya Group of  Institutions</span>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="#" class="nav-item nav-link">Testimonial</a>
+                    <a href="#Testimonial" class="nav-item nav-link">Testimonial</a>
                     <a href="gallery.html" class="nav-item nav-link">Our Gallery</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                     
@@ -65,8 +65,8 @@
     <div class="container-fluid bg-primary px-0 px-md-5 mb-5">
         <div class="row align-items-center px-3">
             <div class="col-lg-6 text-center text-lg-left">
-                <h1 class="text-white mb-4 mt-5 mt-lg-0" style="font-size: 30px; text-align: top" >Akshobhya Public School & Pu college</h1>
-                <h4 class="display-3 font-weight-bold text-white" >Your Child Is Our Priority</h4>
+                <h1 class="text-white mb-4 mt-5 mt-lg-0" style="font-size: 60px; text-align: top" >Akshobhya Public School & Pu college</h1>
+                <h4 class="display-3 font-weight-bold text-white" style="font: style 40px;">Your Child Is Our Priority</h4>
                 <h2><p class="text-white mb-4">Create The Best Future For Your Children</p></h2>
                 <a href="about.html" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
             </div>
@@ -214,18 +214,21 @@
                                 <div class="form-group">
                                     <select class="custom-select border-0 px-4" name="class" style="height: 47px;">
                                         <option selected>Select A Class</option>
-                                        <option value="Pre-Kg">Pre-Kg</option>
-                                        <option value="L-Kg">L-Kg</option>
-                                        <option value="class 1">class 1</option>
-                                        <option value="class 2">class 2</option>
-                                        <option value="class 3">class 3</option>
-                                        <option value="class 4">class 4</option>
-                                        <option value="class 5">class 5</option>
-                                        <option value="class 6">class 6</option>
-                                        <option value="class 7">class 7</option>
-                                        <option value="class 8">class 8</option>
-                                        <option value="class 9">class 9</option>
-                                        <option value="class 10">class 10</option>
+                                        <option value="Pre-Kg">PreKg</option>
+                                        <option value="L-Kg">LKg</option>
+                                        <option value="Uk-ke">UKg</option>
+                                        <option value="1 Standard">1 Standard</option>
+                                        <option value="2 Standard">2 Standard</option>
+                                        <option value="3 Standard3">3 Standard</option>
+                                        <option value="4 Standard">4 Standard</option>
+                                        <option value="5 Standard">5 Standard</option>
+                                        <option value="6 Standard">6 Standard</option>
+                                        <option value="7 Standard">7 Standard</option>
+                                        <option value="8 Standard">8 Standard</option>
+                                        <option value="9 Standard">9 Standard</option>
+                                        <option value="10 Standard">10 Standard</option>
+                                        <option value="I PUC">I PUC</option>
+                                        <option value="II PUC">II PUC</option>
                                     </select>
                                 </div>
                                 <div>
@@ -243,7 +246,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="Testimonial">
+    <div class="Testimonial"  id="Testimonial">
     <div class="container-fluid py-5">
         <div class="fade-in" >
         <div class="container p-0">
@@ -332,7 +335,7 @@
                     <h4 class="fa fa-map-marker-alt text-primary"></h4>
                     <div class="pl-3">
                         <h5 class="text-white">Address</h5>
-                        <p>100 ft ring road hosakerehalli bak 3rd stage bengalore 560085</p>
+                        <p>100 ft ring road hosakerehalli BSK 3rd stage bengalore 560085</p>
                         <div class="mapsect">
                             <iframe width="250" height="100" frameborder="0" scrolling="0" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3888.597374832102!2d77.5361721750758!3d12.933579287378267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTLCsDU2JzAwLjkiTiA3N8KwMzInMTkuNSJF!5e0!3m2!1sen!2sin!4v1714042485648!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                          </div>
@@ -358,13 +361,13 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
                     <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
+                    <a class="text-white mb-2" href="#Testimonial"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
                     <a class="text-white mb-2" href="gallery.html"><i class="fa fa-angle-right mr-2"></i>Our Gallery</a>
                     <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h3 class="text-primary mb-4">Newsletter</h3>
+                <h3 class="text-primary mb-4">Contact US</h3>
                 <form action="">
                     <div class="form-group">
                         <input type="text" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
@@ -374,7 +377,7 @@
                             required="required" />
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-block border-0 py-3" type="submit">Submit Now</button>
+                        <button class="btn btn-primary btn-block border-0 py-3" type="submit">Contact Now</button>
                     </div>
                 </form>
             </div>
@@ -404,7 +407,8 @@
 
     <!-- Contact Javascript File -->
     <script src="book_Slot/bookSlot.js"></script>
-
+    <script src="mail/jqBootstrapValidation.min.js"></script>
+    <script src="mail/contact.php"></script>
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
