--- a/contact.html
+++ b/contact.html
@@ -49,12 +49,12 @@
         class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5"
       >
         <a
-          href=""
+          href="index.html"
           class="navbar-brand font-weight-bold text-secondary"
-          style="font-size: 50px"
+          style="font-size: 40px"
         >
-          <img src="images/logo.png" class="logo" />
-          <span class="text-primary" style="font-size: 25px"
+          <img style="margin-left: -30px" src="images/logo.png" class="logo" />
+          <span class="text-primary" style="font-size: 20px"
             >Akshobhya Group of Institutions</span
           >
         </a>
