--- a/gallery.html
+++ b/gallery.html
@@ -37,10 +37,10 @@
     <!-- Navbar Start -->
     <div class="container-fluid bg-light position-relative shadow">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
-            <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
-                <img src="images/logo.png" class="logo" >
-                <span class="text-primary"  style="font-size: 25px;">Akshobhya Group of Institutions</span>
-            </a>
+            <a href="index.html" class="navbar-brand font-weight-bold text-secondary" style="font-size: 40px;">
+                <img style="margin-left: -30px;"  src="images/logo.png" class="logo">
+                  <span class="text-primary" style="font-size: 20px;" >Akshobhya Group of Institutions</span>
+              </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
