Set email index.html

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 
     <!-- Registration Start -->
     
+    
     <div class="container-fluid py-5">
         <div class="fade-in" >
         <div class="container">
@@ -204,6 +205,7 @@
                             <h1 class="text-white m-0">Book A Seat</h1>
                         </div>
                         <div class="card-body rounded-bottom bg-primary p-5">
+                            <form action="https://formspree.io/f/xkndyngy" method="POST">
                             <form action="/book_Slot/send_email.php" method="post" id="emailForm">
                                 <div class="form-group">
                                     <input type="text" class="form-control border-0 p-4" name="name" placeholder="Your Name" required="required" />
@@ -234,6 +236,7 @@
                                 <div>
                                     <button class="btn btn-secondary btn-block border-0 py-3" type="submit">Book Now</button>
                                 </div>
+                            </form>
                             </form>
                         </div>
                     </div>
