--- a/contact.html
+++ b/contact.html
@@ -122,6 +122,7 @@
                   id="contactForm"
                   novalidate="novalidate"
                 >
+                 <form action="https://formspree.io/f/xkndyngy" method="POST">
                   <div class="control-group">
                     <input
                       type="text"
@@ -175,6 +176,7 @@
                       Send Message
                     </button>
                   </div>
+                </form>
                 </form>
               </div>
             </div>
