--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,8 @@
                   id="contactForm"
                   novalidate="novalidate"
                 >
-                 <form action="https://formspree.io/f/xkndyngy" method="POST">
+                  <form action="https://formspree.io/f/xdoqboak" method="POST">
+                 
                   <div class="control-group">
                     <input
                       type="text"
