--- a/contact.html
+++ b/contact.html
@@ -119,12 +119,12 @@
                 <div id="success"></div>
                 <form
                   action="https://formspree.io/f/xdoqboak"
-                  method="POST"
-                  name="sentMessage"
+                  method="POST">
+                  <form name="sentMessage"
                   class="contactForm"
                   id="contactForm"
-                  novalidate="novalidate"
-                >
+                  novalidate="novalidate">
+                
                   <div class="control-group">
                     <input
                       type="text"
@@ -178,6 +178,7 @@
                       Send Message
                     </button>
                   </div>
+                </form>
                 </form>
               </div>
             </div>
