--- a/contact.html
+++ b/contact.html
@@ -166,6 +166,8 @@
                       placeholder="Message"
                       required="required"
                       data-validation-required-message="Please enter your message"
+                      data-validation-minlength-message="Please enter at least {minlength} characters"
+                      minlength="40"
                     ></textarea>
                     <p class="help-block text-danger"></p>
                   </div>
