--- a/contact.html
+++ b/contact.html
@@ -131,6 +131,7 @@
                         type="text"
                         class="form-control"
                         id="name"
+                        name="name"
                         placeholder="Your Name"
                         required="required"
                         data-validation-required-message="Please enter your name"
@@ -142,6 +143,7 @@
                         type="email"
                         class="form-control"
                         id="email"
+                        name="email"
                         placeholder="Your Email"
                         required="required"
                         data-validation-required-message="Please enter your email"
@@ -153,6 +155,7 @@
                         type="text"
                         class="form-control"
                         id="subject"
+                        name="subject"
                         placeholder="Subject"
                         required="required"
                         data-validation-required-message="Please enter a subject"
@@ -164,9 +167,10 @@
                         class="form-control"
                         rows="6"
                         id="message"
+                        name="message"
                         placeholder="Message"
                         required="required"
-                        minlength="40"
+                        minlength="10"
                         data-validation-required-message="Please enter your message"
                         data-validation-minlength-message="Please enter at least {minlength} characters"
                       ></textarea>
