--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="header-image">
-                <img class="img-fluid mt-5" src="images/home 1.png">
+                <img class="img-fluid mt-5" src="images/headPhoto.png">
             </div>
             </div>
             </div>
