Feeback form add as client suggest

--- a/gallery.html
+++ b/gallery.html
@@ -48,7 +48,7 @@
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">About-Us</a>
-                    <a href="index.html#Testimonial" class="nav-item nav-link">Testimonials</a>
+                    <a href="testimonial.html" class="nav-item nav-link">Testimonials</a>
                     <a href="gallery.html" class="nav-item nav-link">Our gallery</a>
                     <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
                     
@@ -321,7 +321,7 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
                     <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="index.html#Testimonial"><i class="fa fa-angle-right mr-2"></i>Testimonials</a>
+                    <a class="text-white mb-2" href="testimonial.html"><i class="fa fa-angle-right mr-2"></i>Testimonials</a>
                     <a class="text-white mb-2" href="gallery.html"><i class="fa fa-angle-right mr-2"></i>Our Gallery</a>
                     <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
