--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
           <div class="navbar-nav font-weight-bold mx-auto py-0">
             <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="about.html" class="nav-item nav-link active">About Us</a>
-            <a href="index.html#Testimonial" class="nav-item nav-link"
+            <a href="testimonial.html" class="nav-item nav-link"
               >Testimonials</a
             >
             <a href="gallery.html" class="nav-item nav-link">Our gallery</a>
@@ -366,7 +366,7 @@
             <a class="text-white mb-2" href="about.html"
               ><i class="fa fa-angle-right mr-2"></i>About Us</a
             >
-            <a class="text-white mb-2" href="index.html#Testimonial"
+            <a class="text-white mb-2" href="testimonial.html"
               ><i class="fa fa-angle-right mr-2"></i>Testimonials</a
             >
             <a class="text-white mb-2" href="gallery.html"
