--- a/contact.html
+++ b/contact.html
@@ -73,9 +73,7 @@
           <div class="navbar-nav font-weight-bold mx-auto py-0">
             <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="about.html" class="nav-item nav-link">About</a>
-            <a href="index.html#Testimonial" class="nav-item nav-link"
-              >Testimonial</a
-            >
+            <a href="testimonial.html" class="nav-item nav-link">Testimonial</a>
             <a href="gallery.html" class="nav-item nav-link">Our Gallery</a>
             <a href="contact.html" class="nav-item nav-link">Contact Us</a>
           </div>
@@ -356,7 +354,7 @@
             <a class="text-white mb-2" href="about.html"
               ><i class="fa fa-angle-right mr-2"></i>About Us</a
             >
-            <a class="text-white mb-2" href="index.html#Testimonial"
+            <a class="text-white mb-2" href="testimonial.html"
               ><i class="fa fa-angle-right mr-2"></i>Testimonial</a
             >
             <a class="text-white mb-2" href="gallery.html"
