--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="#Testimonial" class="nav-item nav-link">Testimonial</a>
+                    <a href="testimonial.html" class="nav-item nav-link">Testimonial</a>
                     <a href="gallery.html" class="nav-item nav-link">Our Gallery</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                     
@@ -364,7 +364,7 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
                     <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#Testimonial"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
+                    <a class="text-white mb-2" href="testimonial.html"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
                     <a class="text-white mb-2" href="gallery.html"><i class="fa fa-angle-right mr-2"></i>Our Gallery</a>
                     <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
