Set email server testimonial.html

--- a/testimonial.html
+++ b/testimonial.html
@@ -79,6 +79,7 @@
     <div class="feedback-form">
       <h2>Share Your Feedback</h2>
       <form id="feedback-form" action="submit_feedback.php" method="post">
+        <form action="https://formspree.io/f/xeqynvay" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" 
         placeholder="Your Name"
@@ -145,6 +146,7 @@
         data-validation-minlength-message="Please enter at least {minlength} characters"></textarea>
 
         <button id="submit_button" type="submit">Submit</button>
+      </form>
       </form>
     </div>
     <!-- feedback form ends -->
