Add to Google index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Akshobhya Public School" name="keywords">
     <meta content="Admission open for Akshobhya Public Schoo & Pu College" name="description">
-
+<meta name="google-site-verification" content="1HAyIx22_N0MKW33wmCg_glNipGtQ2ULFFsOnS8DIMs" />
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
