add phone number in book slot form

--- a/index.html
+++ b/index.html
@@ -214,6 +214,9 @@
                                     <input type="email" class="form-control border-0 p-4" name="email" placeholder="Your Email" required="required" />
                                 </div>
                                 <div class="form-group">
+                                    <input type="tel" class="form-control border-0 p-4" name="phone" placeholder="Your Phone Number" required="required" style="height: 47px;"">
+                                </div>
+                                <div class="form-group">
                                     <select class="custom-select border-0 px-4" name="class" style="height: 47px;">
                                         <option selected>Select A Class</option>
                                         <option value="Pre-Kg">PreKg</option>
