--- a/gallery.html
+++ b/gallery.html
@@ -297,7 +297,7 @@
                         <h5 class="text-white">Address</h5>
                         <p>100 ft ring road hosakerehalli BSK 3rd stage bengalore 560085</p>
                         <div class="mapsect">
-                            <iframe width="250" height="100" frameborder="0" scrolling="0" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3888.597374832102!2d77.5361721750758!3d12.933579287378267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTLCsDU2JzAwLjkiTiA3N8KwMzInMTkuNSJF!5e0!3m2!1sen!2sin!4v1714042485648!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3888.5915707713057!2d77.5387610134926!3d12.9339516737673!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3e3883226745%3A0xb6baa9e2f086b1ac!2sAkshobhya%20Public%20School%20%26%20Pu%20College!5e0!3m2!1sen!2sin!4v1717433961474!5m2!1sen!2sin" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                          </div>
                     </div>
                 </div>
@@ -327,13 +327,14 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h3 class="text-primary mb-4">Contact Us</h3>
-                <form action="">
+                <h3 class="text-primary mb-4">Contact US For Creating a Website like this</h3>
+                <form action="https://api.web3forms.com/submit" method="POST">
+                    <input type="hidden" name="access_key" value="1e9c9889-6df4-4933-96b0-74edd4bda6b8">
                     <div class="form-group">
-                        <input type="text" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
+                        <input type="text" name="Username" id="Username" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
                     </div>
                     <div class="form-group">
-                        <input type="email" class="form-control border-0 py-4" placeholder="Your Email"
+                        <input type="email" name="Email" id="Email" class="form-control border-0 py-4" placeholder="Your Email"
                             required="required" />
                     </div>
                     <div>
