improve SEO and Socail marketing

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>Akshobhya Public School & Pu College</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Akshobhya Public School" name="keywords">
-    <meta content="Admission open for Akshobhya Public Schoo & Pu College" name="description">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Akshobhya Public School & Pu College provides high-quality education focusing on holistic development. Admission open for Akshobhya Public School & Pu College.">
+    <meta name="keywords" content="Akshobhya Public School, PU College, quality education, holistic development">
+
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -32,7 +33,22 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="style.css" rel="stylesheet">
+
+    <!-- Meta Tags for SEO and Social Media Sharing -->
     <meta name="google-site-verification" content="1HAyIx22_N0MKW33wmCg_glNipGtQ2ULFFsOnS8DIMs" />
+    <meta property="og:title" content="Akshobhya Public School & Pu College" />
+    <meta property="og:description" content="Admission open for Akshobhya Public School & Pu College" />
+    <meta property="og:image" content="images/headPhoto.jpg"/>
+    <meta property="og:url" content="https://akshobhyapublicschool.in" />
+    <meta property="og:type" content="website" />
+    
+    <!-- Instagram -->
+    <meta property="insta:title" content="Akshobhya Public School & Pu College" />
+    <meta property="insta:description" content="Admission open for Akshobhya Public School & Pu College" />
+    <meta property="instapp:site" content="@akshobhyaschoolandpucollege">
+    <meta property="insta:image" content="images/headPhoto.jpg" />
+    <meta property="insta:url" content="https://akshobhyapublicschool.in" />
+    <meta name="theme-color" content="#007bff">
 </head>
 
 <body>
