Set adsense index.html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <meta property="insta:image" content="images/headPhoto.jpg" />
     <meta property="insta:url" content="https://akshobhyapublicschool.in" />
     <meta name="theme-color" content="#007bff">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7692269568738157"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
