--- a/about.html
+++ b/about.html
@@ -40,6 +40,8 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="style.css" rel="stylesheet" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7692269568738157"
+     crossorigin="anonymous"></script>
   </head>
 
   <body>
