--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,9 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="style.css" rel="stylesheet" />
-  </head>
+    
+  </head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7692269568738157"
+     crossorigin="anonymous"></script>
 
   <body>
     <!-- Navbar Start -->
