minor changes for 304 issues

--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Nunito&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Nunito&display=swap?t=123456789" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap?t=123456789" rel="stylesheet">
 
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css?t=123456789" rel="stylesheet">
 
     <!-- Flaticon Font -->
-    <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
+    <link href="lib/flaticon/font/flaticon.css?t=123456789" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css?t=123456789" rel="stylesheet">
+    <link href="lib/lightbox/css/lightbox.min.css?t=123456789" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css?t=123456789" rel="stylesheet">
 
     <!-- Meta Tags for SEO and Social Media Sharing -->
     <meta name="google-site-verification" content="1HAyIx22_N0MKW33wmCg_glNipGtQ2ULFFsOnS8DIMs" />
@@ -424,19 +424,19 @@
 
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js?t=123456789"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js?t=123456789"></script>
+    <script src="lib/easing/easing.min.js?t=123456789"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js?t=123456789"></script>
+    <script src="lib/isotope/isotope.pkgd.min.js?t=123456789"></script>
+    <script src="lib/lightbox/js/lightbox.min.js?t=123456789"></script>
 
     <!-- Contact Javascript File -->
-    <script src="book_Slot/bookSlot.js"></script>
-    <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.php"></script>
+    <script src="book_Slot/bookSlot.js?t=123456789"></script>
+    <script src="mail/jqBootstrapValidation.min.js?t=123456789"></script>
+    <script src="mail/contact.php?t=123456789"></script>
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="js/main.js?t=123456789"></script>
 </body>
 
 </html>
