--- a/contact.html
+++ b/contact.html
@@ -116,14 +116,12 @@
             <div class="col-lg-7 mb-5">
               <div class="contact-form">
                 <div id="success"></div>
-                <form action="https://formspree.io/f/xdoqboak" method="post">
-                  <form
-                    action="mail/contact.php"
-                    method="POST"
-                    name="sentMessage"
-                    class="contactForm"
-                    id="contactForm"
-                    novalidate="novalidate"
+                <form action="https://formspree.io/f/xdoqboak" 
+                  method="post"
+                  name="sentMessage"
+                  class="contactForm"
+                  id="contactForm"
+                  novalidate="novalidate"
                   >
                     <div class="control-group">
                       <input
