update website as per client index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Akshobhya Public School & Pu College</title>
+    <title>Akshobhya Public School</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Akshobhya Public School & Pu College provides high-quality education focusing on holistic development. Admission open for Akshobhya Public School & Pu College.">
-    <meta name="keywords" content="Akshobhya Public School, PU College, quality education, holistic development">
+    <meta name="description" content="Akshobhya Public School provides high-quality education focusing on holistic development. Admission open for Akshobhya Public School & Pu College.">
+    <meta name="keywords" content="Akshobhya Public School, quality education, holistic development">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -42,8 +42,8 @@
     <meta property="og:type" content="website" />
     
     <!-- Instagram -->
-    <meta property="insta:title" content="Akshobhya Public School & Pu College" />
-    <meta property="insta:description" content="Admission open for Akshobhya Public School & Pu College" />
+    <meta property="insta:title" content="Akshobhya Public School" />
+    <meta property="insta:description" content="Admission open for Akshobhya Public" />
     <meta property="instapp:site" content="@akshobhyaschoolandpucollege">
     <meta property="insta:image" content="images/headPhoto.jpg" />
     <meta property="insta:url" content="https://akshobhyapublicschool.in" />
@@ -86,7 +86,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <h1 class="text-white mb-4 mt-5 mt-lg-0" style = "font-family: 'Raleway', sans-serif; font-size: 60px; text-align: top" >Akshobhya Public School & Pu college</h1>
+                <h1 class="text-white mb-4 mt-5 mt-lg-0" style = "font-family: 'Raleway', sans-serif; font-size: 60px; text-align: top" >Akshobhya Public School</h1>
                 <h4 class="display-3 font-weight-bold text-white" style="font-family: 'Raleway', sans-serif; font-size: 2em;
                 margin-bottom: 0.5em;">We nurture young minds with a comprehensive, modern education in a caring and supportive environment.</h4>
                 <h2><p class="text-white mb-4" style="font-family: 'Raleway', sans-serif; font-size: 1.2em;">Enroll your child today to unlock their potential and shape a bright future.</p></h2>
@@ -339,7 +339,7 @@
                     <img src="images/logo.png" class="logof" >
                     <span class="text-white"  style="font-size: 16px;">Akshobhya Group of Institutions</span>
                 </a>
-                <p>Akshobhya Public School & Pu college</p>
+                <p>Akshobhya Public School</p>
                 <p>Create The Best Future For Your Children</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
