Update website as per client about.html

--- a/about.html
+++ b/about.html
@@ -285,7 +285,7 @@
               >Akshobhya Group of Institutions</span
             >
           </a>
-          <p>Akshobhya Public School & Pu college</p>
+          <p>Akshobhya Public School</p>
           <p>Create The Best Future For Your Children</p>
           <div class="d-flex justify-content-start mt-4">
             <a
