Update website as per client testimonial.html

--- a/testimonial.html
+++ b/testimonial.html
@@ -215,7 +215,7 @@
                     <img src="images/logo.png" class="logof" >
                     <span class="text-white"  style="font-size: 16px;">Akshobhya Group of Institutions</span>
                 </a>
-                <p>Akshobhya Public School & Pu college</p>
+                <p>Akshobhya Public School</p>
                 <p>Create The Best Future For Your Children</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
