--- a/gallery.html
+++ b/gallery.html
@@ -277,7 +277,7 @@
                     <span class="text-white"  style="font-size: 16px;">Akshobhya Group of Institutions</span>
                     
                 </a>
-                <p>Akshobhya Public School & Pu college</p>
+                <p>Akshobhya Public School </p>
                 <p>Create The Best Future For Your Children</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
