Customer Requirement:  change name of School "Akshobhya Public Schoo & Pu College" to "Akshobhya Public School".

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Akshobhya Public School" name="keywords" />
     <meta
-      content="Admission open for Akshobhya Public Schoo & Pu College"
+      content="Admission open for Akshobhya Public School"
       name="description"
     />
 
