--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Akshobhya Public School</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Akshobhya Public School provides high-quality education focusing on holistic development. Admission open for Akshobhya Public School & Pu College.">
+    <meta name="description" content="Akshobhya Public School provides high-quality education focusing on holistic development. Admission open for Akshobhya Public School.">
     <meta name="keywords" content="Akshobhya Public School, quality education, holistic development">
 
     <!-- Favicon -->
@@ -35,8 +35,8 @@
 
     <!-- Meta Tags for SEO and Social Media Sharing -->
     <meta name="google-site-verification" content="1HAyIx22_N0MKW33wmCg_glNipGtQ2ULFFsOnS8DIMs" />
-    <meta property="og:title" content="Akshobhya Public School & Pu College" />
-    <meta property="og:description" content="Admission open for Akshobhya Public School & Pu College" />
+    <meta property="og:title" content="Akshobhya Public School" />
+    <meta property="og:description" content="Admission open for Akshobhya Public School" />
     <meta property="og:image" content="images/headPhoto.jpg"/>
     <meta property="og:url" content="https://akshobhyapublicschool.in" />
     <meta property="og:type" content="website" />
