--- a/testimonial.html
+++ b/testimonial.html
@@ -5,7 +5,7 @@
     <title>Akshobhya Public School</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Akshobhya Public School" name="keywords">
-    <meta content="Admission open for Akshobhya Public Schoo & Pu College" name="description">
+    <meta content="Admission open for Akshobhya Public School" name="description">
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
