Customer requirements added

--- a/gallery.html
+++ b/gallery.html
@@ -259,6 +259,45 @@
                         </video>
                         </div>
                     </div>
+                        
+                     <div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <video  height="240" controls>
+                            <source src="images/vid2.mp4"
+                            type="video/mp4">
+                        </video>
+                        </div>
+                        </div>
+
+                         <div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <video  height="240" controls>
+                            <source src="images/vid3.mp4"
+                            type="video/mp4">
+                        </video>
+                        </div>
+                        </div>
+
+                         <div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <video  height="240" controls>
+                            <source src="images/vid4.mp4"
+                            type="video/mp4">
+                        </video>
+                        </div>
+                        </div>
+
+                         <div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
+                    <div class="position-relative overflow-hidden mb-2">
+
+                        <video  height="240" controls>
+                            <source src="images/vid5.mp4"
+                            type="video/mp4">
+                        </video>
+
+
+                        </div>
+                    </div>
                 </div>
                 
             </div>
