Customer requirement:  - add a new video

--- a/gallery.html
+++ b/gallery.html
@@ -295,6 +295,16 @@
                             type="video/mp4">
                         </video>
 
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
+                    <div class="position-relative overflow-hidden mb-2">
+
+                        <video  height="240" controls>
+                            <source src="images/vid6.mp4"
+                            type="video/mp4">
+                        </video>
+
 
                         </div>
                     </div>
