--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             <p class="m-0 text-center text-white">
                 &copy; <a class="text-primary font-weight-bold" href="#">akshobhyapublicschool</a>. All Rights Reserved. Designed
                 by
-                <a class="text-primary font-weight-bold" href="">HanuCode Web Solutions</a>
+                <a class="text-primary font-weight-bold" href="">Naveen</a>
             </p>
         </div>
     </div>
