--- a/gallery.html
+++ b/gallery.html
@@ -328,6 +328,22 @@
                             <source src="./images/video8.mp4"
                             type="video/mp4">
                         </video>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <video  height="240" controls>
+                            <source src="./images/vid9.mp4"
+                            type="video/mp4">
+                        </video>
+                        </div>
+                    </div>
+
+                        <video  height="240" controls>
+                            <source src="./images/vid10.mp4"
+                            type="video/mp4">
+                        </video>
 
 
                         </div>
