--- a/gallery.html
+++ b/gallery.html
@@ -251,6 +251,7 @@
                         
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
                     <div class="position-relative overflow-hidden mb-2">
                         <video  height="240" controls>
@@ -340,12 +341,14 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-4 col-md-6 mb-4 portfolio-item fourth">
+                    <div class="position-relative overflow-hidden mb-2">
                         <video  height="240" controls>
                             <source src="./images/vid10.mp4"
                             type="video/mp4">
                         </video>
 
-
+                        
                         </div>
                     </div>
                 </div>
