--- a/gallery.html
+++ b/gallery.html
@@ -628,7 +628,7 @@
             <p class="m-0 text-center text-white">
                 &copy; <a class="text-primary font-weight-bold" href="#">www.akshobyapublicschool.com</a>. All Rights Reserved. Designed
                 by
-                <a class="text-primary font-weight-bold" href="#">HanuCode Web Solutions</a>
+                <a class="text-primary font-weight-bold" href="#">Naveen</a>
             </p>
         </div>
     </div>
